# if-rs

./: Cargo.toml  credits.txt  run
backend/: Cargo.toml
backend/src/: as_any.rs  lib.rs
backend/src/iams/: inventory.rs  mod.rs
backend/src/items/: item.rs  item_type.rs  mod.rs  ore.rs
backend/src/player/: mod.rs  player.rs
frontend/: Cargo.toml  dependencies.txt
frontend/src/: camera.rs  main.rs  scene.rs
frontend/src/entities/: item.rs
frontend/src/player/: actions.rs  gravity.rs  mod.rs  movement.rs
frontend/src/player/ui/: tab_menu.rs
