[package]
name = "industrial-failure"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.1", features = ["jpeg"] }
backend = { path = "../backend" }
log = "0.4.21"
env_logger = "0.11.3"
bevy-inspector-egui = "0.23.4"
bevy_xpbd_3d = { version = "0.4.2", features = ["simd", "3d"] }
